style/blocks/_testimonials.scss
.wp-block-svbk-testimonials {
    width: 100%;

    &:after {
        @include clearfix();
        @include clearfix-after();
    }

    .wp-block-svbk-testimonial {
        margin-bottom: 50px;
    }

    &.is-style-grid,
    &.is-style-masonry {
    
        .wp-block-embed.is-type-video {
            margin-left: -20px;
            margin-right: -20px;
            margin-top: 0;
            margin-bottom: 0;
        }
    }

    &.is-style-grid {

        @media screen and (min-width: 768px) {
        
            .testimonial {
                float: left;
                width: 32%;
                margin-right: 2%;

                &:nth-of-type(3n + 3) {
                    margin-right: 0;
                }
            }
        }
    }

    &.is-style-masonry {

        .testimonial {

            &:before,
            &:after {
                display: none;
            }
        }

        @media screen and (min-width: 768px) {
            column-count: 2;

            .testimonial {
                margin-bottom: 20px;
            }
        }
    }

    &.loading {
        padding-bottom: 50px;
        position: relative;

        &:before {
            @include icon-content('\e926');
            @include font-size(2);
            display: block;
            position: absolute;
            bottom: 25px;
            left: 50%;
            width: 35px;
            height: 35px;
            line-height: 35px;
            transform: translateX(-50%);
            text-align: center;
            animation-name: loader-rotation;
            animation-iteration-count: infinite;
            animation-duration: 1s;
            animation-timing-function: ease-in-out;
            color: #bbb;
        }

        @keyframes loader-rotation {

            from {
                transform: translateX(-50%) rotate(0);
            }

            to {
                transform: translateX(-50%) rotate(360deg);
            }
        }
    }
}
/* ... */

